# nexus

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  MEMORY.md  PRD.md  README.md  SPEC.md  docker-compose.yml  install.sh  nexus.db  package-lock.json  package.json  pyproject.toml  python_project.md  test_message.txt  uninstall.sh  verify-full.js
.github/workflows/: ci.yml  claude-code-action.yml  claude-code-security-review.yml  e2e.yml  macos-dmg.yml
.playwright-mcp/: .gitignore  page-2026-05-26T00-18-38-256Z.yml  page-2026-05-26T00-29-36-763Z.yml  page-2026-05-26T00-37-38-479Z.yml  page-2026-05-26T00-54-39-623Z.yml  page-2026-05-26T00-55-32-459Z.yml  page-2026-05-26T00-56-12-962Z.yml  page-2026-05-26T03-51-15-980Z.yml  page-2026-05-26T03-52-11-182Z.yml  page-2026-05-26T03-52-37-825Z.yml  page-2026-05-26T04-08-41-148Z.yml  page-2026-05-26T04-11-11-543Z.yml  page-2026-05-26T04-11-40-514Z.yml  page-2026-05-26T04-11-47-939Z.yml  page-2026-05-26T04-12-06-608Z.yml  page-2026-05-26T04-20-37-304Z.yml  page-2026-05-26T04-20-57-407Z.yml  page-2026-05-26T04-21-04-875Z.yml  page-2026-05-26T04-21-18-440Z.yml  page-2026-05-26T04-55-00-224Z.yml  page-2026-05-26T04-55-14-323Z.yml  page-2026-05-26T04-55-24-233Z.yml  page-2026-05-26T04-56-20-444Z.yml  page-2026-05-26T05-08-39-160Z.yml  page-2026-05-26T05-08-52-176Z.yml  page-2026-05-26T05-09-05-645Z.yml  page-2026-05-26T05-09-53-967Z.yml  page-2026-05-26T05-11-04-496Z.yml  page-2026-05-26T05-11-18-434Z.yml  page-2026-05-26T05-11-45-662Z.yml  page-2026-05-26T05-21-52-556Z.yml  page-2026-05-26T05-22-06-808Z.yml  page-2026-05-26T05-22-18-152Z.yml  page-2026-05-26T05-22-40-764Z.yml  page-2026-05-26T05-23-35-710Z.yml  page-2026-05-26T05-25-11-062Z.yml  page-2026-05-26T05-26-42-431Z.yml  page-2026-05-26T05-27-11-732Z.yml  page-2026-05-26T05-27-24-725Z.yml  page-2026-05-26T05-53-48-070Z.yml  (+87 more)
.workbuddy/memory/: 2026-07-17.md  2026-07-18.md
_temp/: nexus-dark-v1.html  nexus-forest-v1.html  nexus-forest-v2.html
data/: eval_report.json  fact_check_eval_report.json  fact_check_eval_samples.jsonl  rubric_eval_samples.jsonl
desktop/: .gitignore  electron-builder.json  package-lock.json  package.json  tsconfig.json
desktop/assets/: icon.icns
desktop/assets/icon-source/: draw.py
desktop/src/: backend.ts  main.ts  paths.ts  preload.ts  types.ts
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: main.rs  runtime.rs  ws_relay.rs
desktop/tests/: backend.test.ts
docs/: README.md  RELEASE_NOTES_v0.1.0.md  architecture.md
docs/data-flow/: memory-write.md  wechat-channel.md  ws-main.md
docs/designs/: frontend.md
docs/operations/: audit-2026-06-29.md  e2e-2026-06-27.md  fact-check.md  logging.md  quality.md  signing.md
docs/prototypes/: nexus-handdrawn-assistant-ui-v2.html  nexus-macos-app-ui-prototype.html
docs/refactor/: audit.md
docs/superpowers/: 2026-06-24-deepagents-security-design.md  progress.md
docs/superpowers/plans/: 2026-05-23-nexus-backend.md  2026-05-25-nexus-refactor-plan.md  2026-05-25-nexus-totoro-ui-plan.md  2026-06-05-agent-reliability-and-quality.md  2026-06-08-nexus-macos-dmg-app.md  2026-06-19-intent-recognition-routing.md  2026-06-20-observability-subsystem.md  2026-06-23-channel-abstraction.md  2026-06-26-tauri-migration.md  (+15 more)
frontend/: .gitignore  Dockerfile  README.md  e2e-setup.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: README.md  chat-happy-path.spec.ts  clarification.spec.ts  debug-agnes-message.spec.ts  diag-ws-page.spec.ts  helpers.ts  hitl-confirm-mock.spec.ts  hitl-confirm.spec.ts  multi-turn.spec.ts  reconnect.spec.ts  reject-display.spec.ts  settings.spec.ts  wechat-channel.spec.ts  ws-auth-subprotocol.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
nexus/: SOUL.md  __init__.py
nexus/.deepagents/: AGENTS.md
nexus/backend/: agent.py  config.py  database.py  db.py  launcher.py  main.py  mcp.py  memory.py  models.py  models_config.py  nexus.db  permissions.py  profiles.py  requirements.txt  run.py  runtime_main.py  session.py  sessions.py  shell_audit.py  shell_sandbox.py  tools.py
nexus/cli/: __init__.py  config_cmd.py  config_store.py  doctor.py  gateway.py  main.py  setup_cmd.py
nexus/pptmaster/: __init__.py  runner.py
screenshots/: after_send  check_state  current_state  nexus.db
scripts/: build_backend_app.sh  build_dmg.sh  build_sidecar.sh  eval_rubrics.py  gen_nexus_intro_pptx.py  hitl_bypass_test.py  migrate_legacy_memory.py  nexus.icns  seed_user_agents_md.py  shot_window.py  sign_app.sh  test_clarification_live.py  verify_phase2.py  vite_proxy_diag.js  ws_proxy_diag.py  ws_proxy_diag_full.py
tests/: conftest.py  e2e_debug_stock_question.py  e2e_driver.py  real_llm_driver.py  test_agent.py  test_agent_memory.py  test_agent_resilience.py  test_agent_security.py  test_build_dmg_script.py  test_channel_registry.py  test_checkpointer_sqlite.py  test_clarification.py  test_cli_commands.py  test_config_loading.py  test_config_ws_token.py  test_db_fact_check_columns.py  test_db_idempotent_session.py  test_db_index_wechat.py  test_db_init_retry.py  test_db_like_escape.py  test_db_migration.py  test_db_migrations_intent.py  test_db_migrations_quality.py  test_db_session_columns.py  test_deepagents_integration.py  test_dynamic_identity_middleware.py  test_e2e_features.py  test_e2e_regression_coverage.py  test_e2e_resilience.py  test_estimate_tokens.py  test_fact_check_e2e_tomorrow.py  test_fact_check_exchange_rate.py  test_fact_check_extractors.py  test_fact_check_middleware.py  test_fact_check_middleware_persistence.py  test_fact_check_pipeline.py  test_fact_check_regression_2026_07_10.py  test_fact_check_system_prompt.py  test_fact_check_tools.py  test_fact_check_units.py  (+76 more)
tests/e2e/: probe_ask_user_fallback.py  probe_shell_run_dmg.py
(+290 files in other folders)
