[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "1.0.0"
description = "Nexus - AI Gateway"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "夜小白科技有限公司", email = "contact@yexiaobai.com"}
]
keywords = ["ai", "gateway", "chatbot", "nexus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "deepagents>=0.6.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.0.20",
    "ddgs>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "rank-bm25>=0.2.0",
    "pywebview>=6.0 ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line length (由 formatter 处理)
    "B008",  # FastAPI 依赖注入里常见
]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]