[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "1.0.0"
description = "Nexus - AI Gateway"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "夜小白科技有限公司", email = "contact@yexiaobai.com"}
]
keywords = ["ai", "gateway", "chatbot", "nexus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "deepagents>=0.6.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.0.20",
    # WHY 显式声明 ``langgraph-checkpoint-sqlite``:
    #   ``langgraph`` 1.2.x / ``deepagents`` 0.6.x 都不传递依赖这个子包
    #   (langgraph-checkpoint 是基类,sqlite 实现是独立可选包)。
    #   干净环境 ``pip install -e .`` 不会装它,导致
    #   ``nexus.backend.agent._checkpoint`` 在 import 时
    #   ``ModuleNotFoundError: No module named 'langgraph.checkpoint.sqlite'``,
    #   agent 懒构造失败,所有依赖 LLM 的 E2E test 拿到空回复
    #   (E2E multi-turn 2026-06-30 真实踩坑)。
    #   范围锁 2.0-4.0:跟 langgraph 1.x 配套,``<5`` 留给未来
    #   langgraph 2.0 重新评估。
    "langgraph-checkpoint-sqlite>=2.0,<4.0",
    "ddgs>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "rank-bm25>=0.2.0",
    "pywebview>=6.0 ; sys_platform == 'darwin'",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line length (由 formatter 处理)
    "B008",  # FastAPI 依赖注入里常见
]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]