[package]
name = "nexus-desktop"
version = "1.1.0"
description = "Nexus Desktop"
authors = ["夜小白科技"]
edition = "2021"
rust-version = "1.74"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
libc = "0.2"
once_cell = "1"
# tungstenite 0.24 内部用 http::HeaderValue;构造 Request headers 时复用同一类型,
# 避免 token 拼接后 HeaderValue::from_str 失败路径上类型不对。
http = "1"
# base64url 编码 token(2026-07-12 WS subprotocol 改造,避免 . / = 违反
# RFC 7230 §3.2.6 token ABNF,Chromium ≥149 严格校验)。
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
